# uiautomation_mcp

./: .gitignore  main.py  pyproject.toml  readme.md  setup.py
tests/: __init__.py  test_mcp_tools.py
uiautomation_mcp/: __init__.py  __main__.py  config.py  core.py  models.py  picker_gui.py  server.py
uiautomation_mcp/tools/: __init__.py  discovery.py  helpers.py  interaction.py  patterns.py  picker.py  query.py
