[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiautomation-mcp"
version = "0.1.0"
description = "MCP Server for Windows UI Automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "yinkaisheng"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "comtypes>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
uiautomation-mcp = "uiautomation_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yinkaisheng/Python-UIAutomation-for-Windows"
Repository = "https://github.com/yinkaisheng/Python-UIAutomation-for-Windows"

[tool.setuptools.packages.find]
where = ["."]
include = ["uiautomation*",]
